# componentize-qjs

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  release-plz.toml
.github/: renovate.json
.github/actions/publish-runtime/: action.yml
.github/actions/setup-runtime-cache/: action.yml
.github/scripts/: check-npm-packages.sh  prepare-runtime-artifacts.sh  publish-npm-packages.sh  stage-npm-assets.sh
.github/workflows/: ci.yml  cli-release.yml  npm-publish.yml  release-plz.yml  runtime-publish.yml
crates/core/: CHANGELOG.md  Cargo.toml  build.rs
crates/core/src/: codegen.rs  lib.rs  resolver.rs  stubwasi.rs
crates/core/wit/: init.wit
crates/runtime/: Cargo.toml
crates/runtime/src/: abi.rs  bindings.rs  buffer.rs  call.rs  futures.rs  interpreter.rs  lib.rs  resources.rs  result.rs  streams.rs  task.rs  trivia.rs  wit_imports.rs
crates/runtime/src/module/: fs.rs  host.rs  mod.rs  wit.rs
crates/runtime/wit/: init.wit
docs/: runtime-intrinsics.md
examples/: hello.js  hello.wit  imports.js  imports.wit  math-provider.js  math-provider.wit  types.js  types.wit  wasi-test.js  wasi-test.wit
examples/module-resolution/: README.md  config.js  main.js  package.wit
examples/native-messaging/: README.md  manifest.json
examples/wasi-stdio/: echo.js  package.wit
examples/wasi-test/: package.wit  wasi-test.js
napi/: .gitignore  Cargo.toml
napi/src/: lib.rs
npm/: cli.mjs  index.d.ts  index.js  package-lock.json  package.json
npm/test/: componentize.test.mjs
src/: cli.rs  codegen.rs  lib.rs  main.rs
tests/: async_types.rs  cli.rs  fuzz.rs  integration.rs  quickcheck_echo.rs  wasi.rs  wit_types.rs
tests/common/: mod.rs
tests/js/: async-fuzz.js  fuzz.js
tests/wit/: test.wit
tests/wit/async-fuzz/: async-fuzz.wit
tests/wit/fuzz/: fuzz.wit
