[workspace]
members = ["crates/runtime", "napi"]
default-members = [".", "napi"]
resolver = "2"

[package]
name = "componentize-qjs"
version = "0.1.0"
edition = "2021"
description = "Convert JavaScript to WebAssembly components using QuickJS"
license = "Apache-2.0"

[lib]
name = "componentize_qjs"
path = "src/lib.rs"

[[bin]]
name = "componentize-qjs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bytes = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
wit-parser = "0.244"
wit-component = { version = "0.244", features = ["dummy-module"] }
wit-dylib = "0.244"
wasi-preview1-component-adapter-provider = "41"
wasmtime = { version = "42", features = ["component-model", "async"] }
wasmtime-wasi = "42"
wasmtime-wizer = { version = "42", features = ["component-model", "wasmtime"] }
wac-graph = "0.9"
indexmap = "2"
oxc_minifier = "0.115.0"
oxc_allocator = "0.115.0"
oxc_codegen = "0.115.0"
oxc_parser = "0.115.0"
oxc_span = "0.115.0"

[build-dependencies]
anyhow = "1.0"
flate2 = "1.1"
glob = "0.3"
tar = "0.4"
ureq = "3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"

[features]
default = []
optimize-size = []

[profile.release]
lto = true

[profile.test]
opt-level = 3
