[package]
name = "componentize-qjs-napi"
version = "0.1.0"
edition = "2021"
description = "Node.js bindings for componentize-qjs"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
componentize-qjs = { path = ".." }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
napi = { version = "3", features = ["tokio_rt"] }
napi-derive = "3"
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }

[build-dependencies]
napi-build = "2"
