[package]
name = "componentize-qjs-napi"
version.workspace = true
edition.workspace = true
description = "Node.js bindings for componentize-qjs"
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
componentize-qjs.workspace = true
componentize-qjs-cli.workspace = true
anyhow.workspace = true
clap.workspace = true
napi = { version = "3", features = ["tokio_rt"] }
napi-derive = "3"
tokio.workspace = true

[build-dependencies]
napi-build = "2"
