[package]
name = "componentize-qjs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Convert JavaScript to WebAssembly components using QuickJS"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
include = [
    "src/**/*",
    "wit/**/*",
    "build.rs",
    "../../README.md",
    "prebuilt/runtime.wasm",
    "prebuilt/runtime.wasm.cdx.json",
    "prebuilt/runtime.wasm.sha256",
]

[lib]
name = "componentize_qjs"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
bytes = "1"
tokio.workspace = true
wit-parser.workspace = true
wit-component = { version = "0.244", features = ["dummy-module"] }
wit-dylib = "0.244"
wasi-preview1-component-adapter-provider = "41"
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmtime-wizer = { version = "42", features = ["component-model", "wasmtime"] }
wac-graph = "0.9"
indexmap = "2"

[build-dependencies]
anyhow.workspace = true
flate2 = "1.1"
glob = "0.3"
tar = "0.4"
ureq = "3"

[features]
default = []
optimize-size = []
